deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - name: app
          image: wil42/playground:vé
          ports:
            - containerPort: 8888
              protocol: TCP
