service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
